--- a/style.css
+++ b/style.css
@@ -10,14 +10,21 @@ header {
 }
 
 header h1 {
-    text-align: center;
     font-size: 2.5em;
+}
+
+header h3 {
+    margin-top: 10px;
+}
+
+header h1, header h3 {
+    text-align: center;
 }
 
 button {
     padding: 20px;
     border: 1px solid #000;
-    font-size: 1.5em;
+    cursor: pointer;
 }
 
 .addBtn {
@@ -37,7 +44,7 @@ aside {
 }
 
 aside p {
-    font-size: 1.75em;
+    font-size: 1.2em;
     font-weight: 600;
 }
 
