--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ aside p {
     margin-bottom: 20px;
 }
 
-.filter button {
-    margin: 0 20px;
+button {
+    margin: 10px 0;
 }
 
 #parentContainer {
